updated at: 2023-07-31 20:37, 植物のローポリ3Dモデルと草地のテクスチャ【オリジナル3Dモデル】 - wakamaru shop - BOOTH

--- a/VRChat/65/1036165.html
+++ b/VRChat/65/1036165.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "dXzKTvUw80dQjlvI7kp/gSyW52mDtTqLEHcr+Voz9XM="></script>
+    "vOTETchTUppCW8DAf2OMc9JjPn/4bv8L8F5tC9kbHwM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"植物のローポリ3Dモデルと草地のテクスチャ【オリジナル3Dモデル】","description":"植物のローポリ3Dモデル3種、テクスチャ3種、それらを組み合わせたPrefab9種。\n草地のテクスチャ1種です。\n\n左から△32ポリゴン、64ポリゴン、24ポリゴン。\n\nVRChatのワールドでの使用を想定して、容量を抑えることができる仕様にしてあります。\nunitypackageのサンプルシーンに、草地のテクスチャを貼ったPlaneと植物9種を並べました。\n\n---------------------------------------------------------------\nファイルの中身\n・Plants01.unitypackage\n・Plant01.fbx（△32ポリゴン）\n・Plant02.fbx（△64ポリゴン）\n・Plant03.fbx（△24ポリゴン）\n・PlantA.tga\n・PlantA_Normal.tga\n・PlantB.tga\n・PlantB_Normal.tga\n・PlantC.tga\n・PlantC_Normal.tga\n・Grass01.tga\n・Grass01_Normal.tga\n\nテクスチャデータはサイズ2048で制作しました。\n圧縮前のデータをzipに入れてあります。\nファイルサイズが大きいので、unityで使う際に圧縮をしてください。\nunitypackage内のテクスチャはサイズ512で圧縮もしてあります。\n\nsampleシーンはunity version 5.6.3p1で制作しました。\n\n改変自由。\n3Dモデルデータとして使える状態での再配布禁止。\nゲーム、映像作品などで使うことができます。商用可。\n誹謗中傷、違法行為、または国防に関する法律に違反する行為への使用を禁止します。\nwakamaru shop","url":"https://booth.pm/ja/items/1036165","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/ba1632d1-d7a2-47bf-b5c7-b1b4c83290fc/i/1036165/cc046113-a4c5-4643-a17f-ea801226593f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="dXzKTvUw80dQjlvI7kp/gSyW52mDtTqLEHcr+Voz9XM="></script>
+    nonce="vOTETchTUppCW8DAf2OMc9JjPn/4bv8L8F5tC9kbHwM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -174,7 +174,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      317
+                                      318
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -190,7 +190,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      317
+                                      318
                                     </div>
                                   </div></a>
                                 </div>
@@ -441,9 +441,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
