--- a/VRChat/47/1036147.html
+++ b/VRChat/47/1036147.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "LE2+kAppfwxOGUPK6PXizIKXTz6hnfXjNebJ1hYa+kc="></script>
+    "Jlum+OLwwjg2+hpwMhGi60ylKYygbkQZIT75DKPA86M="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat】ボクセル門松【world想定】","description":"MagicaVoxelで作られた門松です。\n\n\n当モデルはVRChatの正月用worldのオブジェクト用を想定して作成されています。\nFBXとPNGが同梱された圧縮ファルダがあります。\n特にギミック等は全く入っていません。\n\n\n初出品なので不具合が出る可能性がありますがご容赦くださいますようお願いいたします。\n\nポリゴン数\n・15630\n\n【利用規約】\n\n・このモデルの個人利用,商用利用,改変を自由に許可します。\n\n・このモデルデータの2次配布・誹謗中傷等への使用は禁止します。\n\n・良心に従って、楽しめるように使ってください。\n\n・楽しく使って頂けたらとても嬉しいです()\n\n\n※不具合がありましたら当ショップのオーナー、ウィッグ侍(@ulii_2)までご連絡ください。\n\n作製：侍の雑貨店（ウィッグ侍）\ntwitter：ウィッグ侍(@ulii_2）\nVRChatID：wigsamurai","url":"https://booth.pm/ja/items/1036147","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/ae8df399-1c88-45e3-a4cc-880b4b94ca33/i/1036147/766c22f4-e338-4836-afff-c6e90a9e69c9_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="LE2+kAppfwxOGUPK6PXizIKXTz6hnfXjNebJ1hYa+kc="></script>
+    nonce="Jlum+OLwwjg2+hpwMhGi60ylKYygbkQZIT75DKPA86M="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -347,9 +347,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
