updated at: 2023-07-31 20:38, オリジナル3Dモデル「アクアリウム」 - hermitage - BOOTH

--- a/VRChat/55/1035455.html
+++ b/VRChat/55/1035455.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "kddqs06+4pnMNRva9h6t/xjUiPgQ0qbpKN+EGS2699c="></script>
+    "XAFvlJMssKmy5DxANKIHP9LAHMds9fthvDikwRcLXkY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル「アクアリウム」","description":"オリジナル3Dモデル「アクアリウム」紹介文及び利用規約\n\n使用者は配布モデルの利用に先立ち、当規約の内容全てに同意をした上で配布物を利用可能なものといたします。\nまた、本モデルデータを購入をした時点で利用規約に同意したものとみなします。\n\n内容物(UnityPackage)：\n・aquarium.fbx\n3メッシュで構成されているモデルデータです。三角ポリゴン数：55632\n\n・aquarium_prefab\nUnityのシーン上にD\u0026Dをするだけでマテリアルの設定等が完了しているモデルが配置できます。\n\n・aquarium_Aquarium_AlbedoTransparency.png\n・aquarium_Aquarium_MetallicSmoothness.png\n・aquarium_Aquarium_Normal.png\n・aquarium_Aquarium_AlbedoTransparency.mat\n\n・aquarium_backscreen_AlbedoTransparency.png\n・backscreen.mat\nこのマテリアルの画像を任意のものに変更することで、お好きな背景に変更可能です。\n（16:9比率の画像基準）\n\n・aquarium_inside_AlbedoTransparency.png\n・aquarium_inside_MetallicSmoothness.png\n・aquarium_inside_Normal.png\n・aquarium_inside.mat\n\n・aquarium_water_AlbedoTransparency.png\n・water.mat\n・aquarium_glass_AlbedoTransparency.png\n・glass.mat\n\n・bubble.png\n・bubble.mat\n\n※追記：お部屋の大きさ等に合わせてscaleを変更した場合、\n中の泡のパーティクルは大きさが変わらないので不自然に見える場合があります。\nその場合、プレビューで見える最後の画像で解説している、\nパーティクルのlife timeとstart sizeを変更していただくと自然に見えるようになります。\n\n・pleco.anim\n中の魚のアニメーションです。blendshape式\n\n・Readme.txt\n本ページに記載している文と同じtxtファイルです。","url":"https://booth.pm/ja/items/1035455","offers":{"priceCurrency":"JPY","@type":"Offer","price":"400"},"image":"https://booth.pximg.net/c/620x620/b8474108-5499-4da9-b74d-db41150399f3/i/1035455/7b50d5f9-c9da-492d-a79c-1346b03f6df3_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kddqs06+4pnMNRva9h6t/xjUiPgQ0qbpKN+EGS2699c="></script>
+    nonce="XAFvlJMssKmy5DxANKIHP9LAHMds9fthvDikwRcLXkY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -565,9 +565,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
