--- a/VRChat/14/1353314.html
+++ b/VRChat/14/1353314.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "8Hn5K/fCE5FiVNgC0NCJDorftCinyDLm0AlVRmHsGus="></script>
+    "hKXNNySJoCAV/GAfXkFL5QzXVUWgsXvHz3n1kEYBNNo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル「中辺ローザ」","description":"---------------------------------------------------------\n【オリジナル3Dモデル】中辺 ローザ　紹介文\n　制作者：あのゐ\n\n※下記にモデルについての説明、利用規約が記載されておりますので、\nご購入の前に必ずお読みいただき、ご了承された方のみ、\nご購入をお願いいたします。\n\n\n■■モデル説明-------------------------------------------\n■【中辺ローザ】概要\n\nポリゴン数：　　　　　　　　19433\n身長：　　　　　　　　　　　約140cm\nリップシンク：　　　　　　　対応\nアイトラッキング：　　　　　対応\nフルボディートラッキング：　対応\nDynamicBone:　　　　　　　　設定済み\nシェーダ：　　　　　　　　　ArktoonShader\n\nリップシンクは、[あ・い・う・え・お]５種用意しています。\n\n表情は、[笑顔]、[ウィンク]、[眼閉じ]、[驚き]、[ジト目]、[ほほ膨らませ]、[怒り]、[狂気]\nを用意しています。この他にも数点用意しています。\n\n本データにはArktoonシェーダを同梱させていただいております。\nhttps://booth.pm/ja/items/1027997\n\n\n■■内容物-----------------------------------------------\n■パッケージファイル\n・Rosa.unitypackage\n　　セットアップされたアバターが入っているUnityPackageデータです。\n　　導入の仕方は、導入方法をご覧ください。\n\n・Rosa_FB.unitypackage\n　　セットアップされたフルボディー用のアバターが入っているUnityPackageデータです。\n　　導入の仕方は、導入方法をご覧ください。\n\n■FBXファイル\n・Rosa.fbx\n　　基本となるモデルデータです。\n\n・Rosa_bin.fbx\n　　基本となるモデルデータです。\n　　Brenderで読み込む際にはこちらを使用ください。\n\n・Rosa_FullBody.fbx\n　　フルボディートラッキングを想定した\n　　ボーン構造となったモデルデータです。\n\n■テクスチャデータ\n・TX_BodyClothes.png\n・TX_BodyClothes.psd\n　　衣装と体のテクスチャデータです。\n\n\n・TX_Face.png\n・TX_Face.psd\n　　顔のテクスチャデータです。\n\n・TX_Hair.png\n・TX_Hair.psd\n　　髪のテクスチャデータです。\n\n■導入方法\n1.Unity(VRChatが対応しているバージョン)で新規プロジェクトを作成します。\n2.VRCSDKをインポートします。（VRCSDKは公式よりダウンロード）\n　　Asetts → Import Package → Custom Package よりインポートしてください。\n3.有料アセットのDynamicBoneをインポートします。（任意）\n4.本データに付属しているRosa.unitypackageをインポートします。\n5.AvatarSetupを開きます。\n6.VRCSDKでアップロードをします。\n\n※動作環境はUnity2017.4.15f1にて確認しております。\n　それ以外での動作は保証致しかねます。\n※アップロードの際は他の人にクローン出来ないよう、\n　privateにてアップロードしてください。\n\n\n■■利用規約---------------------------------------------\n本モデルを購入された時点で本利用規約に同意したものとみなします。\n本利用規約の内容は変更される場合があり、最新のものが適応されます。\n\n■中辺 ローザ（以下、本モデル）の著作権は、制作者あのゐが保持し、モデル改変、モデルデータの一部のみでも、本モデル制作者あのゐに帰属するものとします。\n\n■本モデルの改変は自由に行えます。\n\n■本モデル購入者がVRChat等、モデルデータをアップロードし、アバター等に利用するサービスへの使用を許可いたします。\n\n■本モデルを用いてのyoutube等動画サイトで活動は未改変、改変ともに\n　許可いたします。収益化なども制限いたしません。\n\n■R-18・R-18Gへの利用は制限いたしません。\n　公開する場合は個人の責任のもと、法律に基づきお願いします。\n\n■本モデルとその付属のモデルデータ・テクスチャデータの再配布・販売は改変の有無を問わず禁止いたします。\n\n■VRChatのアバターペデスタル等、購入者以外が自由に本モデルを使用することができるような行為を禁止いたします。\n\n■本モデルを利用しての、他者を誹謗中傷する表現、政治、宗教活動を禁止いたします。\n\n■当利用規約において翻訳の都合上、多言語との差異が生じた場合日本語の利用規約を適用するものとします。\n\n制定日：2019年5月6日\n\n---------------------------------------------------------\n■免責事項\n本モデルを利用することで発生したトラブルや損失、損害に対して、制作者あのゐは一切責任を負いません。\n本モデルのご使用は使用者の責任において行ってください。\n\n---------------------------------------------------------\n\n\n他、何か問題等ございましたらこちらのアカウントに\nダイレクトメッセージを送っていただければと存じます。\n\nhttps://twitter.com/jam_of_apple\n\n\n以上\n\n","url":"https://booth.pm/ja/items/1353314","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/e2a53639-d7ec-42b8-8110-11b77414ed26/i/1353314/43d02c02-329f-42c1-84aa-669088966cda_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8Hn5K/fCE5FiVNgC0NCJDorftCinyDLm0AlVRmHsGus="></script>
+    nonce="hKXNNySJoCAV/GAfXkFL5QzXVUWgsXvHz3n1kEYBNNo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -468,9 +468,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
