--- a/VRChat/51/1352551.html
+++ b/VRChat/51/1352551.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "XnCL0HoBkZt5bN38F/laNqpavHd4mo8Tl6KpxXP2pro="></script>
+    "zhLPtKNlR54spT2ID+LX2T3/gtEiFmbIIvg27GAr7MM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"N016　うさぎのしぽ：満月タイプ(Phybone対応)","description":"↓はじめにお読みください↓\n【 PhysBonesに対応しました！】\nこちらの商品はVRCHAT向けです。それ以外の利用は想定していません。\n\n設定済みのunitypackageがダウンロードできます。ファイルにはUnlit WF Shaderは含まれておりません。詳細はダウンロードファイルをご確認ください。\n\n【商品説明】(!)アップデートしました。[2022.05.01]\nありそうで無かったうさぎのしぽです。テクスチャーはペンタブで下書きした後、最後はモデルに直接書き込みました。モフモフ感は動画でご確認ください。変形させてもいいしそのままでもまんまるでかわいいです。（おとウフちゃんも付けてます。）\n\n概要\n△320\nマテリアル１\nPhysbone x 3\nUnlit WF Shader\n\n【更新履歴】\n2019.05.06 BOOTH登録\n2020.04.07 Unity2018.4.20f1/VRCSDK2に対応しました。\n2020.04.08 Dynamic Boneに対応しました。\n2022.05.01 Phyboneに対応しました。\n\n【取り付け方】\n対応するボーンにつけてください。\n\n◆利用規約◆\n\nこの利用規約は（以下、「本規約」といいます。）はおとウフがモデルデータの利用条件を定めるものです。本規約に従ってユーザーの皆様はご利用いただきます。\n\n第1条（適用）\n本規約は，ユーザーとおとウフとの間の本サービスの利用に関わる一切の関係に適用されるものとします。\nおとウフは本サービスに関し，本規約のほか，ご利用にあたってのルール等，各種の定め（以下，「個別規定」といいます。）をすることがあります。これら個別規定はその名称のいかんに関わらず，本規約の一部を構成するものとします。\n本規約の規定が前条の個別規定の規定と矛盾する場合には，個別規定において特段の定めなき限り，個別規定の規定が優先されるものとします。\n\n第2条（禁止事項）\nユーザーは，本サービスの利用にあたり，以下の行為をしてはなりません。\n\n・モデルデータの再配布、販売、NFT化を禁止します。NFT化された本製品を発見した場合、ＮＦＴ化された方に使用料380万円を請求させていただきます。\n・本サービスの内容等，本サービスに含まれる著作権を侵害する行為\n・不正な目的を持って本サービスを利用する行為\n・本サービスの他のユーザーまたはその他の第三者に不利益，損害，不快感を与える行為\n・他のユーザーに成りすます行為\n・おとウフのサービスに関連して，反社会的勢力に対して直接または間接に利益を供与する行為\n・その他，おとウフが不適切と判断する行為\n\n第3条（サービス内容の変更等）\n・おとウフは，ユーザーに通知することなく，本サービスの内容を変更しまたは本サービスの提供を中止することができるものとし，これによってユーザーに生じた損害について一切の責任を負いません\n・本モデルを使用された事によって生じるいかなる損害に対しておとウフは一切責任を負いません。\n\n第4条（利用規約の変更）\nおとウフは，必要と判断した場合には，ユーザーに通知することなくいつでも本規約を変更することができるものとします。なお，本規約の変更後，本サービスの利用を開始した場合には，当該ユーザーは変更後の規約に同意したものとみなします。\n\n【作業環境】\nVRCHAT向けにUnity 2019.4.31f1(VRCSDK3)にて作成しています。モデリングはblender3.00です。","url":"https://booth.pm/ja/items/1352551","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"300","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/adcb68ac-e24a-43e9-ae1b-2f72ba1c8e8a/i/1352551/39953dbb-e8f6-44a4-a7d5-1c6be982f80f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XnCL0HoBkZt5bN38F/laNqpavHd4mo8Tl6KpxXP2pro="></script>
+    nonce="zhLPtKNlR54spT2ID+LX2T3/gtEiFmbIIvg27GAr7MM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -513,9 +513,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
