--- a/VRChat/00/1352300.html
+++ b/VRChat/00/1352300.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "hlaH0eyqMoRzb4MKlpA8RW8boXGI9fDoEDxn6qO1rqc="></script>
+    "TpfiWMz5sKdANzf7B59fGuOgl+93iOibjeqBjW5kkRE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"玉龍","description":"名前：玉龍\n獣龍種、玉龍科の基亜種。小さくて龍の仲間では随分と体が短いため玉龍といわれている。胴体が短くても他が長いので長細い印象をうけやすい。知らない人からはよく別の龍の雛と間違われる。小さいため他の種よりは飼いやすい。\n\n------------------------------------------\n季節に合わせてパート３！５月はこどもの日があるので鯉のぼりから｢滝を登った鯉が龍になる｣ってわけで小さな龍の子にしてみました。えっらいしっぽが長いです。ヒゲも長いです。\n\n身長約８０ｃｍと自分の作品では通常サイズです。\n\n動物的かわいいを追求した結果、ＶＲＣでフルトラッキングをするとたまに腰がおかしくなる。Ｖキャスで腕が微妙に伸びきらない場合があります。ご了承ください。(Ｖキャス側は大抵キャリブレーションを少し工夫するだけで落ち着く)\n------------------------------------------\n圧縮ファイルの中にＦＢＸ、ＶＲＭ、ＰＳＤ←（テクスチャ）が入っています。模様や色の改変、パーツの追加などご自由にどうぞです。\n\nＶＲＣに持って行きたい方はＶＲＭファイルをこちらの方のコンバーター(https://booth.pm/ja/items/1025226)を使うと簡単に入れられます。いつも助かっています。\n\nＲ指定がかかるようなものは基本的にＮＧです。\n商用利用は内容によりますので要相談ですが、公式放送に映っちゃった、テヘっ☆くらいは問題ありません。\n利用規約：https://docs.google.com/document/d/1Ak670A-tcKLZDcSHzh3lbfvl1ci1sMWAjaGc07EJTT8/edit?usp=sharing\n\nバーチャルキャストでの試着やクルクル回してさまざまな角度から確認したい人用にＴＨＥ ＳＥＥＤ ＯＮＬＩＮＥにモデルがございます(https://seed.online/items/c02248f41cd08d39b7ca12d85482a12db7b4c18d34684aeb485965b666bbb690)。改変したい！ＶＲＣに連れて行きたい！という方は購入してください。","url":"https://booth.pm/ja/items/1352300","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2500"},"image":"https://booth.pximg.net/c/620x620/69cf3447-8e42-4524-ba75-39d2133342d9/i/1352300/ca8ecd1d-9906-48cf-905c-9e759956eda5_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hlaH0eyqMoRzb4MKlpA8RW8boXGI9fDoEDxn6qO1rqc="></script>
+    nonce="TpfiWMz5sKdANzf7B59fGuOgl+93iOibjeqBjW5kkRE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -475,9 +475,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
