updated at: 2023-07-31 20:39, オリジナル3Dモデル　ルルムゥ　-Lulumuu- - わさびのさと - BOOTH

--- a/VRChat/82/1349782.html
+++ b/VRChat/82/1349782.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "OQKE5vO3ZDKTHo1OLRVJQcD2qOI4ewa7Nndr8P6an3U="></script>
+    "SHR1PswmD1tEMCqS64cyyLsqH4bki/gPv7TmnEK8IAc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル　ルルムゥ　-Lulumuu-","description":"もふもふの大きな耳と尻尾が特徴のけもっ子です。かなしい時に耳が垂れます。\n種族は不明ですがたぶん森に住んでます。\n\nhttps://hub.vroid.com/characters/4230434342103140320/models/9146520423609918939\n\n(UTS2適用時とは見た目が少し異なります)\n\n○Humanoid対応 \n●身長約138cm \n○フルボディトラッキング対応 \n●VRC向けアイトラッキング対応(瞳のみ。表情との干渉防止のため瞬きは非対応です)\n○DynamicBone設定済み\n●表情シェイプキー41種\nサンプル表情6種設定済み\n○VRC用リップシンク15種\nVRM等想定あいうえおシェイプキー\n\n【ver2.0.0について】\nSDK3.0に対応しました！\n\nSDK2.0には対応していません！更新前のデータ配布は終了しました\n\n・右手表情6種\n・左手耳操作\n・着替え\n・尻尾操作\n・アイトラッキング、まばたき\n・素体の貫通対策がシェイプキー管理になりました\n・一部ボーン位置、本数変更\n・着替えも含めた総ポリゴン数△41861（素体△30654）\n\n（VRMファイルの更新はありません）","url":"https://booth.pm/ja/items/1349782","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/523200ed-7fc1-4c95-84ec-768984fd122d/i/1349782/692b0f28-8e36-487d-bf20-e756a3e0e01e_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OQKE5vO3ZDKTHo1OLRVJQcD2qOI4ewa7Nndr8P6an3U="></script>
+    nonce="SHR1PswmD1tEMCqS64cyyLsqH4bki/gPv7TmnEK8IAc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -551,9 +551,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
