--- a/VRChat/57/1352357.html
+++ b/VRChat/57/1352357.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "eGy1CtG5zDYe6gm2rJ2QB4vhCFhdFz3DGR1YMTxZf1I="></script>
+    "MuGjzr9wsMzCvudltGp5C0gFqNREWCkt8YJZsiOYKCg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ハートメガネ","description":"■ご利用方法\n使いたいアバターのProjectに当unitypackageをインポート。\nPrefabをヒエラルキーにD\u0026Dしサイズと位置を合わせ、アバターのHeadボーン下に入れて下さい。\n※必ずバックアップを取ってから作業して下さい。\n\n■詳細\nポリゴン数（三角面）：3061\nシェーダー：メガネ向けガラスシェーダー 色付き版 Ver.2.0c（https://booth.pm/ja/items/1052508）を同梱、設定してあります\n\n■利用に際して\n\n許可\n○改造や改変\n○VRM化、その他VRMソフトでの個人利用（誰でも使用可能はNGです）\n○収益化動画への写り込み\n○モデルを利用したVtuber活動\n○unityで制作するゲームに使用できます。\n　インディーズの場合、作者名と作品名の明記のみお願いします。企業の場合、別途利用料が発生しますので、ご連絡ください。\n\n禁止事項\n○第三者への貸出：VRChat上でペデスタル、アバターコピーでの使用を禁止します。\n○配布：改造の有無を問わず、インターネットを通じて誰でもDL可能な状態にすることを禁止します。\n○売買：改造の有無を問わず、第三者への売買を禁止します。\n\nTo English speaking people.\nThis data can be remodeled, good for commercial use, do not redistribute.\n\n■利用規約全文\n同梱のkiyaku.txtか、\nオンライン利用規約のこちらを御覧ください\nhttps://kuroneko-youhinten.wixsite.com/mysite/kiyaku-preview\n\n■免責事項\n当3Dモデルに起因または関連する、使用またはその他の扱いによって生じる一切の請求、損害、その他の義務について何らの責任も負いません。\n\n\n■お問い合わせ\nBOOTHのメッセージ機能よりお願いいたします。\n\n制作：黒井\n2019/5/6\nver1.0","url":"https://booth.pm/ja/items/1352357","offers":{"priceCurrency":"JPY","@type":"Offer","price":"150"},"image":"https://booth.pximg.net/c/620x620/3101f45b-b262-485c-a1a1-3d2a8da33466/i/1352357/9fa9bd55-6bf7-4ec9-b336-54f9c9b87cae_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="eGy1CtG5zDYe6gm2rJ2QB4vhCFhdFz3DGR1YMTxZf1I="></script>
+    nonce="MuGjzr9wsMzCvudltGp5C0gFqNREWCkt8YJZsiOYKCg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -418,9 +418,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
