updated at: 2023-07-31 20:43, オリジナル3Dモデル：主力量産機「ゲ・スゥ」 - 工房鉄鋸 - BOOTH

--- a/VRChat/38/1344638.html
+++ b/VRChat/38/1344638.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "GliV3/lg9wnxFysxHkYOu4e2P8209z/ggoNeASJhXWA="></script>
+    "k7+Nl2gcnzw+VJb2poa1GtFRQUhC9ITPJxhnc0gFlXw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル：主力量産機「ゲ・スゥ」","description":"VRChatやunityで使う事を想定したオリジナルロボットモデル\n自分が知っている範囲ではいそうでいなかった敵主力量産機をイメージした「ゲ・スゥ」\n同梱するVRMモデルはambrでも使用が可能です\n\n2019/05/26：\nアップデートしました\nバックパックや携行武器のモデルを追加\n本体モデルのみならOculusQuestでも行けることを確認しました\n\n2019/05/30\nリリス・AH・リリーホワイトさんの3Dモデル アセンブリツール「ICAROS」に対応することを想定した分割モデルデータを追加しました\nhttps://lilith-lilywhite.booth.pm/items/1392689\n\n2019/09/21\nVket3仕様のモデルデータ追加＆既存モデルのアップデート\n本体にリップシンクで目を点滅させるためのシェイプキー追加\nAtelier Alcaさんで発売中の\"I-s(アイズ)\"向けのアーマーモデルを追加\nhttps://atelier-alca.booth.pm/items/1572567\n\n2020/01/28\nふぃぎゅあばたー参加モデル化\n","url":"https://booth.pm/ja/items/1344638","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3500"},"image":"https://booth.pximg.net/c/620x620/a9f17602-dcf5-4174-9a68-d5d63ad5f2f5/i/1344638/9794bcb7-40da-49cb-9531-22f48fe6df5c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="GliV3/lg9wnxFysxHkYOu4e2P8209z/ggoNeASJhXWA="></script>
+    nonce="k7+Nl2gcnzw+VJb2poa1GtFRQUhC9ITPJxhnc0gFlXw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -509,9 +509,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
