updated at: 2023-07-31 20:43, 【無料3Dモデル】　ボトルシップ - Rasseru&#39;s factory - BOOTH

--- a/VRChat/08/1344608.html
+++ b/VRChat/08/1344608.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Gprwy8M4q2N3wKjMXub6qP+77/hEBX+Jo+hDPRkWOJA="></script>
+    "UFEsi+lxr4XoedMep53jQIJUWrlq1LIm3Bffdqasqxk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料3Dモデル】　ボトルシップ","description":"VRChat ワールド向け　ボトルシップ紹介\n\nはじめてBOOTHに出店させていただきます。\n\nこのモデルは非常にポリゴンが多くなっていますので適宜調整してお使いください。\nまた、テクスチャは使用しておりませんので着色は全てマテリアルでおこなっています。\n\n\n【内容物】\nボトルシップフォルダー内\n\n\t①ボトルシップ.fbx\n　\t　ボトルシップのfbxデーターです。\n\n\t②ボトルシップ.blend\n　\t　ボトルシップのblendデーターです。\n\t\n\t③ボトルシップ.unitypackage\n\t　ボトルシップのデーターが入っています。\n\n【改変について】　\n　ご自由にしてください！\n　どのようにしていただいてもかまいません。\n\n\nポリゴン数△:23,384\n\nボトルシップのみなので画像内にあるものはボトルシップ以外付属しません。\n\n\n\n【利用規約】\n\n制定日　2019/05/04\n\nこのモデルを購入した時点で利用規約に同意したものとします。\nまた、この規約は予告なく変更される場合があります。\n\n【禁止事項】\n同封しているモデル(ボトルシップ)、を含んだデータの配布、販売はすべて禁止します。\n\n【免責事項】\n\n本モデルを利用することで発生したトラブルや損害に対してラッセルは一切責任を負いません。ご了承ください。\n\n\nTwitter：＠rasseru2000\n\n\n\n\n\n\n\n\n","url":"https://booth.pm/ja/items/1344608","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/8288cd2e-191b-45f4-98b2-9d1aa5639565/i/1344608/92a99035-1ca8-48c1-8726-094ab59d59c2_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Gprwy8M4q2N3wKjMXub6qP+77/hEBX+Jo+hDPRkWOJA="></script>
+    nonce="UFEsi+lxr4XoedMep53jQIJUWrlq1LIm3Bffdqasqxk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -442,9 +442,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
