updated at: 2023-07-31 20:53, オリジナル3Dモデル「星魔の王笏」 - ぬるもとユニバース - BOOTH

--- a/VRChat/86/1030886.html
+++ b/VRChat/86/1030886.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "DIF8Yb8H9lsCsWxIhdET1HgHQ6LLlOKR+GgwT3vNI8c="></script>
+    "r/fjmd6AYN+3R/2OguwzVIc9U7bwDzdRHrLs8bRr410="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル「星魔の王笏」","description":"■Nukkmoto_buki_wand01\n\n『星魔の王笏』\nかつて星を制した大魔導師のその手に握られていたとされる笏\nそこには大きな魔力が秘められている…\n\nVRChatにての利用を想定した武器モデルです。\nVRChat以外でのご利用も可能です。\n\n水晶装飾部は星模様が動くカスタムシェーダー、\n金属部分はmatcapの影響が入るカスタムシェーダーとなっております。\n\nデータ内容\n・オブジェクト数:2\n・ポリゴン数:△696\n・シェーダー:カスタムシェーダー ２種\n・テクスチャ:512px 3枚\n\n配布内容\n・Unitypackage\n・FBX\n・テクスチャ3枚\n・README\n\n利用について\n・編集、加工、改変可\n・画像・動画などでの商用利用可\n・VRChatでの利用の場合、アバターでの利用や、ワールドのオブジェクト等としての利用も自由です。\n\n・本モデル、改造モデルの著作権はぬるもとに帰属するものとします。\n・本モデルや改造されたモデルを使用することによる生じたトラブルや損失については、\n　ぬるもとは一切の責任を負わないものとします。\n・利用規約の内容は変更をする場合があり、最新の規約が適応されます。\n\n禁止事項\n・データの配布、販売\n・テクスチャ、シェーダーデータの他モデルへの流用\n\n2018/09/28\n\n--------------------------------------------------------------------------\n\n■制作者\nぬるもと\n\n■BOOTHページ\nhttps://nullmoto.booth.pm/\n\n■Twitter\nhttps://twitter.com/Null_moto_","url":"https://booth.pm/ja/items/1030886","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/6b6e769f-e106-4116-9c79-b5a7cd46240d/i/1030886/211fdd9f-a4af-42eb-ba20-6d33bf5a43cf_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="DIF8Yb8H9lsCsWxIhdET1HgHQ6LLlOKR+GgwT3vNI8c="></script>
+    nonce="r/fjmd6AYN+3R/2OguwzVIc9U7bwDzdRHrLs8bRr410="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -408,9 +408,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
