updated at: 2023-07-31 20:54, U.F.O. - Chevit.の創作物置き場 - BOOTH

--- a/VRChat/98/1029998.html
+++ b/VRChat/98/1029998.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "kHN79XrpPu1mwXhUceUuhKN8l47qkPCcXvmbfBb15AY="></script>
+    "j+jJs3Ndq1yrH23x3EopCXFGgGbVdfvLQM7P89ceQIw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"U.F.O.","description":"・説明\nUFOです。5分クオリティです。VRCなどでご自由に扱ってください。全く塗ってないです。あなた色に染めてあげてください。\n\n・内容\nzipファイルになってます。回答するとfbxファイルのが出てくるのであとは煮るなり焼くなりどうぞ。\nポリゴン数△2,126です。見た目の割に多めなので調整して下さい。\n\n・利用条件\n改変、商用可です。カメラ写っても大丈夫です。\n再配布、販売は禁止です。\n\n・その他\n本当遊んで作ったレベルなのでクオリティはお察しですが割と使えるんじゃないかと思います。みんなも適当に作ろうね！","url":"https://booth.pm/ja/items/1029998","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/6d9a4a2d-ad78-4add-a830-2f5b118e649d/i/1029998/251e439c-e854-448d-8bcf-322b57cafedb_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kHN79XrpPu1mwXhUceUuhKN8l47qkPCcXvmbfBb15AY="></script>
+    nonce="j+jJs3Ndq1yrH23x3EopCXFGgGbVdfvLQM7P89ceQIw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -342,9 +342,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
