updated at: 2023-07-31 20:56, VRChat向け　「ひし形カットピアス」 - ヨコシマ工房 - BOOTH

--- a/VRChat/58/1028058.html
+++ b/VRChat/58/1028058.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "87fzZcXxmVz6DUnis/BRvhnhY4c4UY7yyOtvAn0TOZ4="></script>
+    "oFbPeP/TrABXEOqWPuWrhiUNN4OoWQwz1ZpTVMgsj88="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け　「ひし形カットピアス」","description":"このピアス(イヤリング？)は主にVRChatでアバターに装着することを想定しています。\n\nポリゴン数は1個あたり376です。\n\nチェーンの長さが違う2種類のFBXが入っています。\n\nそれぞれに揺れもの用のボーンが入っているので、dynamicbone等の有償アセットを使用することで揺らすことができます。\n\nユニティパッケージになっています。\n\nチェーン、フレーム、宝石の部分がオブジェクト分けされているので。それぞれカラーと質感を分けることができます。\n","url":"https://booth.pm/ja/items/1028058","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9fbdc596-2bd2-4262-98df-0a0fa6cf30d9/i/1028058/8397d0e6-220b-47cc-88e9-64afc81ed6f7_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="87fzZcXxmVz6DUnis/BRvhnhY4c4UY7yyOtvAn0TOZ4="></script>
+    nonce="oFbPeP/TrABXEOqWPuWrhiUNN4OoWQwz1ZpTVMgsj88="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -402,9 +402,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
