updated at: 2023-07-31 21:02, VRChat向け　ハロウィン【幽霊とお菓子セット】 - alitei - BOOTH

--- a/VRChat/25/1022025.html
+++ b/VRChat/25/1022025.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "ZC4Yr7cjvUv0ncn2i1qaLbe7Dq6AK1+Of2TNwwYbI58="></script>
+    "oS3aCpTpBQ6/1zeKY6HcAp7zZTEvDQjlyB0fJgNn2xA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け　ハロウィン【幽霊とお菓子セット】","description":"【利用規約】\n\n\n著作権の放棄はしません\n他の人に迷惑のかからない範囲でご利用ください。\n商用、個人利用共に自由です。\n\nテクスチャ、モデルの改変は自由ですが、\n再配布は改変の有無に関わらず禁止とします。\n\nなにかありましたらTwitterまでご連絡ください。\nTwitterID @nui_ikaruga\n\n2018.9.22 ヌヰ\n\n\n・幽霊 628ポリゴン\n　デフォルメ調の幽霊。ボーン入ってるから揺れるよ\n　シェイプキーで表情も変えられるので、本体と連動させよう！\n\n・ランタン 484ポリゴン\n　クラシカルなランタン。絵柄を変えれば普段使いも出来るぞ\n　ボーンが入ってるので揺らせます\n\n・カボチャヘルメット 552ポリゴン\n　生きのいいカボチャ。幽霊ほどではないが表情が変わるぞ！\n　\n・カボチャかご 688ポリゴン\n　持ち手がついたカボチャ。死んでるので表情はない\n\n・飴玉                  28ポリゴン\n　ペロペロキャンディー 108ポリゴン\n　キャンディケイン     112ポリゴン\n　チョコレート          20ポリゴン\n　ノーマルクッキー      12ポリゴン\n　幽霊クッキー         100ポリゴン\n　コウモリクッキー     132ポリゴン\n　カボチャクッキー      88ポリゴン\n\n　お菓子の詰め合わせ。食べ過ぎるとポリゴン増えるぞ\n","url":"https://booth.pm/ja/items/1022025","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/1eae7904-bf49-4bec-baa6-9c89e938aed4/i/1022025/6d48f7db-bfa6-4f38-bd97-5b9756912da8_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ZC4Yr7cjvUv0ncn2i1qaLbe7Dq6AK1+Of2TNwwYbI58="></script>
+    nonce="oS3aCpTpBQ6/1zeKY6HcAp7zZTEvDQjlyB0fJgNn2xA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -387,9 +387,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
