updated at: 2023-07-31 21:06, VRCDeveloperTool - がとーしょこらのおみせ - BOOTH

--- a/VRChat/39/1016739.html
+++ b/VRChat/39/1016739.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "aJ4/O3Ka7eJB6s+bompUnNzS8e9QFZczMvtbmLobodo="></script>
+    "nATv3Ay85+QeYFoHEV7ZSAmL11mg9cMsGwAVKw1SBLU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRCDeveloperTool","description":"主にVRChat開発などUnityでの開発で役に立ちそうなEditor拡張の詰め合わせです。(今後増えていく予定)\n\nこの詰め合わせに含まれる特にアバターの基本的な設定をおこなうツールはこちらでパッケージ化しています\nhttps://booth.pm/ja/items/1258744\n\nComponentAdderとVRCAvatarTester以外はAvatars3.0にも対応しています","url":"https://booth.pm/ja/items/1016739","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/5daaaeb1-43fa-4c89-8da3-e7e44093dddb/i/1016739/622ac638-57a1-40df-945b-b56a4ec17b82_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="aJ4/O3Ka7eJB6s+bompUnNzS8e9QFZczMvtbmLobodo="></script>
+    nonce="nATv3Ay85+QeYFoHEV7ZSAmL11mg9cMsGwAVKw1SBLU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -173,7 +173,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      2496
+                                      2501
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -189,7 +189,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      2496
+                                      2501
                                     </div>
                                   </div></a>
                                 </div>
@@ -759,9 +759,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
